estilo form busca

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,10 +7,10 @@
                    <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
                  </div>-->
                  
-                 <div class="container">
+                 <div class="">
                    <form class="form-banner">
                        <div class="row">
-                       <div class="input-field col s12 m6" >
+                       <div class="input-field col s12 m3" >
                            <select class="browser-default">
                              <option value="" >Espécie</option>
                              <option value="1">Gato</option>
@@ -18,7 +18,7 @@
                              <option value="3">Outros</option>
                            </select>
                          </div>
-                         <div class="input-field col s12 m6">
+                         <div class="input-field col s12 m3">
                              <select class="browser-default">
                                <option value="">Porte</option>
                                <option value="1">Pequeno</option>
@@ -26,9 +26,7 @@
                                <option value="3">Grande</option>
                              </select>
                            </div>
-                         </div> 
-                         <div class="row">
-                             <div class="input-field col s12 m6" >
+                             <div class="input-field col s12 m3" >
                                  <select class="browser-default">
                                    <option value="" >Estado</option>
                                    <option value="1">Bahia</option>
@@ -36,7 +34,7 @@
                                    <option value="3">Rio de Janeiro</option>
                                  </select>
                                </div>
-                               <div class="input-field col s12 m6">
+                               <div class="input-field col s12 m3">
                                    <select class="browser-default">
                                      <option value="">Cidade</option>
                                      <option value="1">Option 1</option>
@@ -45,7 +43,7 @@
                                    </select>
                                  </div>
                                </div> 
-                         <div class="row center">  
+                       <!--  <div class="row center">  
                              <label for="macho">
                                  <input class="with-gap white" name="sexo" id="macho" value="macho" type="radio"/>
                                  <span>Macho</span>
@@ -54,7 +52,7 @@
                                  <input class="with-gap white" name="sexo" id="femea" value="femêa" type="radio" />
                                  <span>Fêmea</span>
                              </label> 
-                         </div>
+                         </div>-->
                          <div class="row center">       
                        <button class="btn-large waves-effect waves-light orange">Buscar</button>
                      </div>   
