--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -5,36 +5,23 @@
 			
 			
 		<div class="card-panel z-depth-5">
-		<h4 class="center"> Material sign up form</h4>	 
+		<h4 class="center"> Contato</h4>	 
 <div class="row">
   <form class="col s12 m12">
-    <div class="row">
-      <div class="input-field col s12 m12">
-        <i class="mdi-action-account-circle prefix"></i>
-        <input id="icon_prefix" type="text" class="validate">
-        <label for="icon_prefix">Username</label>
-      </div>
-      
-      <div class="input-field col s12 m12">
-        <i class="mdi-communication-email prefix"></i>
-        <input id="icon_email" type="email" class="validate">
-        <label for="icon_email">Your Email</label>
-      </div>
-      
-        <div class="input-field col s12 m12">
-        <i class="fa fa-unlock-alt prefix"></i>
-        <input id="icon_password" type="password" class="validate">
-        <label for="icon_password">Password</label>
-      </div>
-    
-        
+    <label for="nome">Nome:</label>
+    <input type="text" id="nome" name="nome">
+    <label for="nome">Email:</label>
+    <input type="text" id="email" name="email">
+    <label for="nome">Mensagem:</label>
+    <textarea class="materialize-textarea" id="mensagem" name="mensagem"></textarea>
+    <br /> <br />
+    <div class="row center">  
+    <button (click)="cadastrarPet()"  class="btn-large waves-effect waves-light orange">Enviar</button>
     </div>
-  </form>
+    </form>
+    <div><p> {{ mensagem }} </p></div>
    
 </div><!--row-->
- <button class="btn waves-effect waves-light center" type="submit" name="action">Sign Up
-    <i class="fa fa-sign-in right"></i>
-  </button>
 </div><!--card-->
 
 
