Added consumption of City/state API on Home Compenent using vanilla js.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,48 +1,45 @@
 
-     <div class="section no-pad-bot banner" id="index-banner">
-               <div class="container">
+     <div class="section no-pad-bot banner home" id="index-banner">
+               <div class="container home__c">
                  <br><br>
                  <h1 class="header center orange-text">Quer adotar?</h1>
                  <!--<div class="row center">
                    <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
                  </div>-->
                  
-                 <div class="">
-                   <form class="form-banner">
+                 <div class="home__c__w">
+                   <form class="form-banner home__c__w__form">
                        <div class="row">
-                       <div class="input-field col s12 m3" >
-                           <select class="browser-default">
+                       <div class="input-field col s12 m3 home__c__w__form__especie" >
+                           <select class="browser-default home__c__w__form__especie__select">
                              <option value="" >Espécie</option>
                              <option value="1">Gato</option>
                              <option value="2">Cachorro</option>
                              <option value="3">Outros</option>
                            </select>
                          </div>
-                         <div class="input-field col s12 m3">
-                             <select class="browser-default">
+                         <div class="input-field col s12 m3 home__c__w__form__porte">
+                             <select class="browser-default home__c__w__form__porte__select">
                                <option value="">Porte</option>
                                <option value="1">Pequeno</option>
                                <option value="2">Médio</option>
                                <option value="3">Grande</option>
                              </select>
-                           </div>
-                             <div class="input-field col s12 m3" >
-                                 <select class="browser-default">
-                                   <option value="" >Estado</option>
-                                   <option value="1">Bahia</option>
-                                   <option value="2">São Paulo</option>
-                                   <option value="3">Rio de Janeiro</option>
-                                 </select>
-                               </div>
-                               <div class="input-field col s12 m3">
-                                   <select class="browser-default">
-                                     <option value="">Cidade</option>
-                                     <option value="1">Option 1</option>
-                                     <option value="2">Option 2</option>
-                                     <option value="3">Option 3</option>
-                                   </select>
-                                 </div>
-                               </div> 
+                          </div>
+                          <div class="input-field col s12 m3 home__c__w__form__estado" >
+                              <select class="browser-default home__c__w__form__estado__select">
+                                <option value="" >Estado</option>
+                                <option value="1">Bahia</option>
+                                <option value="2">São Paulo</option>
+                                <option value="3">Rio de Janeiro</option>
+                              </select>
+                            </div>
+                            <div class="input-field col s12 m3 home__c__w__form__cidade">
+                                <select class="browser-default home__c__w__form__cidade__select disabled" disabled>
+                                  <option value="" disabled>Cidade</option>
+                                </select>
+                              </div>
+                          </div> 
                        <!--  <div class="row center">  
                              <label for="macho">
                                  <input class="with-gap white" name="sexo" id="macho" value="macho" type="radio"/>
