Amend: removed mock data and added loading behaviour to state select.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,10 +28,7 @@
                           </div>
                           <div class="input-field col s12 m3 home__c__w__form__estado" >
                               <select class="browser-default home__c__w__form__estado__select">
-                                <option value="" >Estado</option>
-                                <option value="1">Bahia</option>
-                                <option value="2">São Paulo</option>
-                                <option value="3">Rio de Janeiro</option>
+                                <option value="" disabled>Estado</option>
                               </select>
                             </div>
                             <div class="input-field col s12 m3 home__c__w__form__cidade">
